[#61] [CSP][PRO] Añadir vista de proyectos al perfil de investigación
Habilita en el perfil de investigación (INV) el acceso en modo lectura a los
proyectos en los que el usuario participa, con el detalle de ejecución
económica para el investigador con rol principal.

- Acceso a los proyectos desde el perfil de investigación: listado de los
  proyectos en los que participa (con filtro de participación actual) y detalle
  en modo lectura. La ficha general está siempre disponible y los apartados
  ampliados se muestran según el rol principal y la variable de configuración
  inv_pro_vista_ampliada_ip. Incluye el acceso a las relaciones del proyecto,
  con CSP como pasarela a REL y PII.
- Apartado de ejecución económica en el perfil de investigación: buscador de
  datos económicos e identificadores SGE del proyecto, según el rol principal y
  la variable de configuración inv_pro_vista_eec_ip, con CSP como pasarela al
  SGE autorizando por persona.
- Restringir el calendario de facturación a los investigadores con rol
  principal activo en la fecha actual.